tests/snapshots/examples_fixtures/aoc__2025__aoc_day7_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day7_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day7_part1.flx:29:16
   |
29 |     let left = slice(arr, 0, idx)
   |                ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day7_part1.flx:30:17
   |
30 |     let right = slice(arr, idx + 1, len(arr))
   |                 ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `concat`.

  examples/aoc/2025/aoc_day7_part1.flx:31:5
   |
31 |     concat(concat(left, [|value|]), right)
   |     ^^^^^^

Hint:
  Define it first: let concat = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day7_part1.flx:44:14
   |
44 |     to_array(map(range(0, width), /_ -> 0))
   |              ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day7_part1.flx:81:13
   |
81 |     let m = put({}, "next", next_mask)
   |             ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day7_part1.flx:82:5
   |
82 |     put(m, "split", split_count)
   |     ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day7_part1.flx:86:11
   |
86 |     match get(x, "next") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day7_part1.flx:93:11
   |
93 |     match get(x, "split") {
   |           ^^^

Hint:
  Define it first: let get = ...;

Found 8 errors.
== stdout ==
<not executed>
